Homework_6/UserApp/Manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw6user-deployment
  labels:
    app: hw6user-dp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw6user
  template:
    metadata:
      labels:
        app: hw6user
    spec:
      containers:
        - name: hw6user
          image: hw6user:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
