Homework_6/UserApp/Manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw6user-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://hw6auth-service.default.svc.cluster.local/api/v1/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://hw6auth-service.default.svc.cluster.local/api/v1/login"
#    nginx.ingress.kubernetes.io/auth-response-headers: "X-User,X-UserId"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /api/v1/user/me
        pathType: Exact
        backend:
          service:
            name: hw6user-service
            port:
              number: 80
